--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,12 +17,17 @@
   header{
     display: inline-flex;
     justify-content: space-between;
-    width: 80%;
+    width: 83%;
     padding: 1.5%;
-    margin-left: 5%;
+    margin-left: 3%;
+    margin-right: 0;
   }
   .moxa{
     display: flex;
+  }
+  .moxita{
+    color: black;
+    font-size: xx-large;
   }
   .asteriscoheader{
     font-size: 1.5cm;
@@ -63,12 +68,29 @@
   }
   .hi{
     flex-grow: 1;
+    
   }
+  .hi h1:hover{
+    color: var(--color-asterisco);
+  font-size: large;
+  transition: 1s;
+  
+  }
+  /* @keyframes escribir{
+    from {
+      width:0%;
+    }
+    to {
+      height: 100%;
+    }
+  } */
+  
   span{
     color: var(--color-asterisco);
   }
   .imagen{
     flex-grow: 1;
+    opacity: 85%;
   }
   .got{
     background-color: black;
@@ -81,6 +103,14 @@
     color: black;
     padding: 2%;
     margin-top: 15px;
+  }
+  .deve{
+    border-radius: 50%;
+    width: 390px;
+    height: 250px;
+    margin-left: 15px;
+    margin-right: 80px;
+    margin-top: 10px;
   }
   
   .skils{
@@ -107,6 +137,42 @@
     position: relative;
     transform: skewY(-4deg);
   }
+ /*  .diago1{
+    background-color: var(--color-asterisco);
+    position: relative;
+    transform: skewY(-8deg);
+    width: 300px;
+    height: 50px;
+    border: 1px solid var(--color-asterisco);
+
+  }
+  .diago2{
+    background-color: var(--color-asterisco);
+    position: relative;
+    transform: skewy(95deg);
+    width: 300px;
+    height: 50px;
+    border: 1px solid var(--color-asterisco);
+
+  }  */
+
+  .ima{
+    position:absolute;
+    z-index: -1;
+    width: 450px;
+    height: 280px;
+    color: var(--color-asterisco);
+    
+    
+  }
+  .imagen{
+    margin-bottom: 80px;
+
+    
+  }
+
+
+
   
   
  
