--- a/css/estilo.css
+++ b/css/estilo.css
@@ -52,8 +52,7 @@
   }
  .service a:hover{
   color: var(--color-asterisco);
-  font-size: large;
-  transition: 1s;
+  transition: var(--color-asterisco);
  }
   .talk{
     background-color: white;
@@ -64,7 +63,9 @@
   
   .hero{
     display: flex;
-    padding: 7%;
+    margin-left: 5%;
+    padding: 2%;
+    margin-bottom: 10px;
   }
   .hi{
     flex-grow: 1;
@@ -136,6 +137,7 @@
   .foot{
     position: relative;
     transform: skewY(-4deg);
+    
   }
  /*  .diago1{
     background-color: var(--color-asterisco);
