<Terminado todo trabajo Tyler 1

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,6 +53,7 @@
  .service a:hover{
   color: var(--color-asterisco);
   transition: var(--color-asterisco);
+  font-weight:bold;
  }
   .talk{
     background-color: white;
