<Terminado con resposive trabajo Tyler

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,6 +21,7 @@
     padding: 1.5%;
     margin-left: 3%;
     margin-right: 0;
+    min-height: 70px;
   }
   .moxa{
     display: flex;
@@ -59,14 +60,28 @@
     background-color: white;
     padding: 0% 3% 0% 3%;
   }
+  @media (max-width:900px){
+    header{
+      flex-direction: column;
+    }
+  }
+  @media (max-width:700px){
+    header{
+      flex-direction: column;
+    }
+  }
+
+  /*termina header */
   
-  
-  
+  /*comienza hero */
+
   .hero{
     display: flex;
     margin-left: 5%;
     padding: 2%;
     margin-bottom: 10px;
+    min-height: 300px;
+    margin-top: 0.5%;
   }
   .hi{
     flex-grow: 1;
@@ -114,6 +129,27 @@
     margin-right: 80px;
     margin-top: 10px;
   }
+
+  @media (max-width:900px){
+    .hero{
+      flex-direction: column;
+    }
+  }
+  @media (max-width:700px){
+    .hero{
+      flex-direction: column;
+    }
+  }
+
+
+
+  /*Fin Hero*/
+
+  /*comeinza barra diagonal foot*/
+
+  .foot{
+    min-height: 100px;
+  }
   
   .skils{
     display: inline-flex;
@@ -138,6 +174,7 @@
   .foot{
     position: relative;
     transform: skewY(-4deg);
+    min-height: 100px;
     
   }
  /*  .diago1{
@@ -174,7 +211,19 @@
     
   }
 
+  @media (max-width:900px){
+    .foot{
+      flex-direction: column;
+    }
+  }
+  @media (max-width:700px){
+    .foot ul{
+      flex-direction: column;
+    }
+  }
+  
 
+/*FIn barra diagonal foot*/
 
   
   
