--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,7 +37,8 @@
   }
   .navbar{
     display: flex;
-    justify-content: center;
+    
+    
   }
   .service{
    display: inline;
@@ -58,8 +59,13 @@
  }
   .talk{
     background-color: white;
-    padding: 0% 3% 0% 3%;
+    padding: 1%;
+    padding-left: 40px;
+    padding-right: 40px; 
+
   }
+  
+
   @media (max-width:900px){
     header{
       flex-direction: column;
@@ -82,15 +88,18 @@
     margin-bottom: 10px;
     min-height: 300px;
     margin-top: 0.5%;
+    
   }
   .hi{
     flex-grow: 1;
+    
     
   }
   .hi h1:hover{
     color: var(--color-asterisco);
   font-size: large;
   transition: 1s;
+  
   
   }
   /* @keyframes escribir{
@@ -112,14 +121,20 @@
   .got{
     background-color: black;
     color: white;
-    padding: 2%;
+    padding: 1%;
     margin-top: 30px;
+    font-size: x-small;
+    padding-left: 27px;
+    padding-right: 27px;
   }
   .lets{
     background-color: white;
     color: black;
-    padding: 2%;
+    padding: 1%;
+    padding-left: 27px;
+    padding-right: 27px;
     margin-top: 15px;
+    font-size: x-small;
   }
   .deve{
     border-radius: 50%;
